# cat3d

./: .gitignore  .tasks  CMakeLists.txt  Doxyfile  README.md
docs/: annotated.html  array_8hpp_source.html  buffer_8hpp_source.html  camera_8hpp_source.html  cat3d_8hpp_source.html  classcat3d_1_1color-members.html  classcat3d_1_1color.html  classcat3d_1_1gl_1_1array-members.html  classcat3d_1_1gl_1_1array.html  classcat3d_1_1gl_1_1buffer-members.html  classcat3d_1_1gl_1_1buffer.html  classcat3d_1_1gl_1_1mesh-members.html  classcat3d_1_1gl_1_1mesh.html  classcat3d_1_1gl_1_1shader-members.html  classcat3d_1_1gl_1_1shader.html  classcat3d_1_1gl_1_1texture-members.html  classcat3d_1_1gl_1_1texture.html  classcat3d_1_1obj_1_1camera-members.html  classcat3d_1_1obj_1_1camera.html  classcat3d_1_1obj_1_1model-members.html  classcat3d_1_1obj_1_1model.html  classcat3d_1_1obj_1_1texture-members.html  classcat3d_1_1obj_1_1texture.html  classcat3d_1_1obj_1_1timer-members.html  classcat3d_1_1obj_1_1timer.html  classcat3d_1_1opts-members.html  classcat3d_1_1opts.html  classcat3d_1_1resource-members.html  classcat3d_1_1resource.html  classcat3d_1_1scene_1_1node-members.html  classcat3d_1_1scene_1_1node.html  classcat3d_1_1util_1_1clock-members.html  classcat3d_1_1util_1_1clock.html  classcat3d_1_1util_1_1time-members.html  classcat3d_1_1util_1_1time.html  classcat3d_1_1util_1_1transform-members.html  classcat3d_1_1util_1_1transform.html  classcat3d_1_1window-members.html  classcat3d_1_1window.html  classes.html  (+33 more)
examples/: CMakeLists.txt  spinning-cube.cpp
include/: cat3d.hpp
(+87 files in other folders)
